Arreglando el cond