@@ -4,8 +4,7 @@ import java.util.LinkedList;
 import java.util.Scanner;
 
 public class Predicates {
-
-public static LinkedList<String> evaluateList(LinkedList<String> lista0, VariableStorage variableStorage) {
+	public static LinkedList<String> evaluateList(LinkedList<String> lista0, VariableStorage variableStorage) {
 		
 		if (lista0!= null) {
 			if ( lista0.get(1).equals(Patterns.LIST) || lista0.get(1).equals("list") ) {
@@ -115,10 +114,7 @@ public static LinkedList<String> evaluateList(LinkedList<String> lista0, Variabl
 			return null;
 		}
 	}
-
-
-
-public static LinkedList<String> evaluateAtom(LinkedList<String> lista1, VariableStorage variableStorage) {
+	public static LinkedList<String> evaluateAtom(LinkedList<String> lista1, VariableStorage variableStorage) {
 	if ( lista1!= null ) {
 		if ( lista1.get(1).equals(Patterns.ATOM) || lista1.get(1).equals("atom")) {
 			LinkedList<String> listaEvaluar = new LinkedList<String>(lista1);
@@ -201,8 +197,7 @@ public static LinkedList<String> evaluateAtom(LinkedList<String> lista1, Variabl
 	
 	
 }
-
-public static LinkedList<String> caseQuote(LinkedList<String> lista2){
+	public static LinkedList<String> caseQuote(LinkedList<String> lista2){
 	if (lista2!=null) {
 		if (lista2.get(1).equals(Patterns.QUOTE) || lista2.get(1).equals("quote")) {
 			lista2.removeFirst();
@@ -222,12 +217,12 @@ public static LinkedList<String> caseQuote(LinkedList<String> lista2){
 			System.out.print(quote+"\n");
 			return lista2;
 		}else {
-			System.out.print("No es quote\n");
+			System.out.print("No es quote, quote\n");
 			return lista2;
 		}
 		
 	}else {
-		System.out.print("La lista era nula entonces no se pudo imprimir \n");
+		System.out.print("La lista era nula entonces no se pudo imprimir , quote\n");
 		return null;
 	}
 	
@@ -235,12 +230,17 @@ public static LinkedList<String> caseQuote(LinkedList<String> lista2){
 
 public static Boolean caseEqual(LinkedList<String> lista3, VariableStorage variableStorage) {
 	if (lista3!= null) {
-		if (lista3.get(1).equals("EQUAL") || lista3.get(1).equals("equal") || lista3.get(1).equals("=")) {
+		if (lista3.get(1).equals("EQUAL") || lista3.get(1).equals("equal") || lista3.get(1).matches(Patterns.LOGICAL) ) {
 			//Se remueven los parentesis que encierran la expresion y se remueve el equal o un igual
+			
+			
 			LinkedList<String> evaluateList = new LinkedList<String>(lista3);
-			evaluateList.removeFirst();
-			evaluateList.removeFirst();
-			evaluateList.removeLast();
+
+			evaluateList.pop();
+			
+			evaluateList.remove(evaluateList.size()-1);
+
+			evaluateList.pop();
 			// Si es un equal deben de quedar solo dos tokens a menos que sea operaciones
 			if (evaluateList.size()==2) {
 				//Si los dos tienen nombres validos 
@@ -249,17 +249,17 @@ public static Boolean caseEqual(LinkedList<String> lista3, VariableStorage varia
 					try{
 						//Si son iguales se retorna true
 						if (variableStorage.getVariableStorage().get(evaluateList.getFirst()).equals(variableStorage.getVariableStorage().get(evaluateList.getLast()))  ) {
-//							System.out.print("true");
+//							System.out.print("retorno 1.1");
 							return true;
 						}
 						//Si no son iguales se retorna false
 						else {
-//							System.out.print("false");
+//							System.out.print("retorno 1.2");
 							return false;
 						}
 					}
 					catch(Exception e) {
-						System.out.print("Al menos uno de los valores ingresados no existe en el almacenamiento\n");
+						System.out.print("Al menos uno de los valores ingresados no existe en el almacenamiento, equals\n");
 						return null;
 					}
 					
@@ -268,11 +268,12 @@ public static Boolean caseEqual(LinkedList<String> lista3, VariableStorage varia
 				else if (evaluateList.getFirst().matches(Patterns.VALID_NAME) || evaluateList.getLast().matches(Patterns.VALID_NAME)) {
 					
 					if (variableStorage.getVariableStorage().containsKey(evaluateList.getFirst())) {
-//						System.out.print(variableStorage.getVariableStorage().get(evaluateList.getFirst()).equals(evaluateList.getLast()) );
+						System.out.print(variableStorage.getVariableStorage().get(evaluateList.getFirst()).equals(evaluateList.getLast()) );
+						
 						return variableStorage.getVariableStorage().get(evaluateList.getFirst()).equals(evaluateList.getLast()) ;
 					}
 					else if (variableStorage.getVariableStorage().containsKey(evaluateList.getLast())) {
-//						System.out.print(variableStorage.getVariableStorage().get(evaluateList.getLast()).equals(evaluateList.getFirst()) );
+						System.out.print(variableStorage.getVariableStorage().get(evaluateList.getLast()).equals(evaluateList.getFirst()) );
 						return variableStorage.getVariableStorage().get(evaluateList.getLast()).equals(evaluateList.getFirst()) ;
 					}
 					else {
@@ -281,20 +282,21 @@ public static Boolean caseEqual(LinkedList<String> lista3, VariableStorage varia
 					
 				}
 				else {
-//					System.out.print(evaluateList.getFirst().equals(evaluateList.getLast()));
+					System.out.print(evaluateList.getFirst().equals(evaluateList.getLast())+"\n");
 					return evaluateList.getFirst().equals(evaluateList.getLast());
 				}
 			}else if((evaluateList.getFirst().equals("(") && evaluateList.getLast().equals(")") ) && (evaluateList.get(1).equals("<") || evaluateList.get(1).equals(">") || evaluateList.get(1).equals("=") || evaluateList.get(1).equals("equal")) || evaluateList.get(1).equals("EQUAL") || evaluateList.get(1).equals("+") || evaluateList.get(1).equals("-") || evaluateList.get(1).equals("*") || evaluateList.get(1).equals("/") || evaluateList.get(1).equals("^")) {
 				Calculator calc = new Calculator (lista3, variableStorage);
+				
 				return calc.ResultComp();
 			}
 			else {
-				System.out.print("Es un equal con mas de 1 argumento, no es valido\n");
+				System.out.print("Es un equal con mas de 1 argumento, no es valido, equals\n");
 				return null;
 			}
 			
 		}else {
-			System.out.print("No es un equal\n");
+			System.out.print("No es un equal, equals\n");
 			return null;
 		}
 	}
@@ -302,10 +304,10 @@ public static Boolean caseEqual(LinkedList<String> lista3, VariableStorage varia
 		return null;
 	}
 }
-//	public static void main(String[] args) {
-//		Scanner scann = new Scanner(System.in);
-//		VariableStorage vs = new VariableStorage();
-//		vs.CreateVariable("value", "8293");
+	public static void main(String[] args) {
+		Scanner scann = new Scanner(System.in);
+		VariableStorage vs = new VariableStorage();
+		vs.CreateVariable("value", "8293");
 //		System.out.print("Lista: " + Predicates.evaluateList(tokenizer.equalParenthesis("(list 1 2 value )"), vs)+"\n");
 //		System.out.print("Lista: " + Predicates.evaluateList(tokenizer.equalParenthesis("(list  )"), vs)+"\n");
 //		System.out.print("Atom: " + Predicates.evaluateAtom(tokenizer.equalParenthesis("(atom 1)"), vs) +"\n");
@@ -325,38 +327,53 @@ public static Boolean caseEqual(LinkedList<String> lista3, VariableStorage varia
 //		System.out.print("Atom: " + Predicates.evaluateAtom(tokenizer.equalParenthesis(scann.nextLine()), vs) + "\n");
 //		System.out.print("Ingrese un lista valida con comillas: "); //por ejemplo (list (^ 23 (+ 2 3 )) "hola"  )
 //		System.out.print("Lista2: "+ Predicates.evaluateList(tokenizer.equalParenthesis(scann.nextLine()), vs) + "\n");
-		
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL 1 2)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL 1 1)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(equal 1 2)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(equal 1 1)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(= 1 2)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(= 2 2)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL value 2)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL 1 value)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL 8293 value)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(= value valor)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(= value value)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(= \"jfkdsl\" 2)"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(= \"jfkdsl\"  \"jfkdsl\")"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(= (+ 1 2)  (+ 1 2) )"), vs));
-//		System.out.print("\n");
-//		System.out.print(Predicates.caseEqual(tokenizer.equalParenthesis("(= (+ 2 2)  (+ 1 2) )"), vs));
-//		System.out.print("\n");
 //		
-//		scann.close();
-//	}
+		System.out.print("(EQUAL 1 2)"+Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL 1 2)"), vs));
+		System.out.print("\n");
+		System.out.print("(EQUAL 1 1)"+Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL 1 1)"), vs));
+		System.out.print("\n");
+		System.out.print("(equal 1 2)"+Predicates.caseEqual(tokenizer.equalParenthesis("(equal 1 2)"), vs));
+		System.out.print("\n");
+		System.out.print("(equal 1 1)"+Predicates.caseEqual(tokenizer.equalParenthesis("(equal 1 1)"), vs));
+		System.out.print("\n");
+		System.out.print("(= 1 2)"+Predicates.caseEqual(tokenizer.equalParenthesis("(= 1 2)"), vs));
+		System.out.print("\n");
+		System.out.print("(= 2 2)"+Predicates.caseEqual(tokenizer.equalParenthesis("(= 2 2)"), vs));
+		System.out.print("\n");
+		System.out.print("(EQUAL value 2)"+Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL value 2)"), vs));
+		System.out.print("\n");
+		System.out.print("(EQUAL 1 value)"+Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL 1 value)"), vs));
+		System.out.print("\n");
+		System.out.print("(EQUAL 8293 value)"+Predicates.caseEqual(tokenizer.equalParenthesis("(EQUAL 8293 value)"), vs));
+		System.out.print("\n");
+		System.out.print("(= value valor)"+Predicates.caseEqual(tokenizer.equalParenthesis("(= value valor)"), vs));
+		System.out.print("\n");
+		System.out.print("(= value value)"+Predicates.caseEqual(tokenizer.equalParenthesis("(= value value)"), vs));
+		System.out.print("\n");
+		System.out.print("(= \"jfkdsl\" 2)"+Predicates.caseEqual(tokenizer.equalParenthesis("(= \"jfkdsl\" 2)"), vs));
+		System.out.print("\n");
+		System.out.print("(= \"jfkdsl\"  \"jfkdsl\")"+Predicates.caseEqual(tokenizer.equalParenthesis("(= \"jfkdsl\"  \"jfkdsl\")"), vs));
+		System.out.print("\n");
+		System.out.print("(= (+ 1 2)  (+ 1 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(= (+ 1 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		System.out.print("(= (+ 2 2)  (+ 1 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(= (+ 2 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		System.out.print("(< (+ 2 2)  (+ 1 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(< (+ 2 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		System.out.print("(> (+ 2 2)  (+ 1 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(> (+ 2 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		System.out.print("(equal (+ 2 2)  (+ 1 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(equal (+ 2 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		System.out.print("(< (+ 2 2)  (+ 1 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(equal (+ 2 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		System.out.print("(equal (+ 2 2)  (+ 1 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(> (+ 2 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		System.out.print("(> (+ 2 32)  (+ 1 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(< (+ 2 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		System.out.print("(= (+ 22 2)  (+ 14 2) )"+Predicates.caseEqual(tokenizer.equalParenthesis("(= (+ 2 2)  (+ 1 2) )"), vs));
+		System.out.print("\n");
+		
+		
+		scann.close();
+	}
 }
